# drone

./: CMakeLists.txt  README.md  package.xml
config/: Drone.yaml  OffboardControl.yaml  camera.yaml  can_config.yaml  land_config.yaml  pos_config.yaml  shot_config.yaml  test.yaml
depends/: depend.sh  ros2.sh
geometry/: PIDcontroller.py  Setgoal.py
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/px4_ros_com/share/px4_ros_com/: package.bash  package.sh  package.zsh
launch/: offboard_control_launch.py  sensor_combined_listener.launch.py  vehicle_local_position_demo.launch.py
log/: latest_build
scripts/: ros2.sh  target_overlay_visualizer.py
scripts/1/: ardupilot.txt  ardupilot_mavros.sh  ros2_mavros.sh
src/examples/1/: OffboardControll.cpp  PID.cpp  RtlPID.cpp  ServoConcroller.cpp  YOLO.cpp  get_or_set_home.cpp  surrounding_shot_area.cpp
src/examples/_offboard/: CameraGimbal.h  InertialNav.cpp  InertialNav.h  MYPID.h  Motors.cpp  Motors.h  OffboardControl.cpp  OffboardControl.h  OffboardControl_Base.cpp  OffboardControl_Base.h  PID.h  PosControl.cpp  PosControl.h  ServoController.h  StateMachine.h  Yolo.h  control.cpp  utils.h
src/examples/drone/: get_target_location.cpp  offboard_control.cpp  offboard_pub_sub_.cpp  send_velocity_command.cpp  tools.cpp  tools.hpp  trajectory_setpoint.cpp  yolo.hpp
src/examples/drone0.0/: main.cpp
src/examples/drone1.0/: main.cpp  offboard_control.hpp  offboard_controler_.cpp  yolo.cpp
src/examples/drone1.1/: offboard_control.hpp  set_and_check_point.cpp
src/examples/listeners/: camera_image_subscriber.cpp  yolo_subscriber.cpp
src/examples/offboard/: base_local.cpp  offboard_control_drone.cpp  offboard_control_gps.cpp  offboard_control_srv.cpp  offboard_control_srv_simple.cpp  test_offboard copy.cpp  test_offboard.cpp
src/examples/offboard_control/: FuzzyPID.cpp  InertialNav.h  Motors.cpp  OffboardControl.cpp  OffboardControl.h  OffboardControl_Base.h  PosControl.cpp  PosControl.h  ServoController.h  Vector3.h  Vector4.cpp  Vector4.h  Yolo.h  control.cpp  math.cpp
src/examples/offboard_control/1/: 1  1.1_insertion-sort  1.1_insertion-sort.c  1.2_merge_sort  1.2_merge_sort.c  1.c  1.py  3.py
src/examples/offboard_land/: InertialNav.cpp  InertialNav.h  Motors.cpp  Motors.h  OffboardControl.cpp  OffboardControl.h  OffboardControl_Base.cpp  OffboardControl_Base.h  PID.cpp  PID.h  PoseControl.cpp  PoseControl.h  Vector2.cpp  Vector3.cpp  Vector3.h  Yolo.h  control.cpp  main.cpp  math.cpp  math.h
src/examples/offboard_sub/: Motors.h  OffboardControl.cpp  PID.h  PosControl.cpp  PosControl.h  SCurve.cpp  TrajectoryGenerator.cpp  Vector2.h  Vector4.h
src/graph/: 1.py
src/install/: local_setup.sh  setup.sh
src/listeners/: pose_subscriber.cpp
src/log/: latest_build
src/offboard_control/: AC_WPNav.cpp  AC_WPNav.h  CameraGimbal.h  InertialNav.cpp  InertialNav.h  Motors.cpp  Motors.h  OffboardControl.cpp  OffboardControl.h  OffboardControl_Base.h  PID.cpp  PID.h  PosControl.cpp  PosControl.h  SCurve.cpp  SCurve.h  ServoController.h  StateMachine.cpp  StateMachine.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h  Yolo copy.bak  Yolo.h  Yolo.h.bak  clustering.cpp  clustering.h  control.cpp  main.cpp  math.cpp  math.h  my_test.cpp  utils.h
src/offboard_control/APMROS2drone/: APMROS2Drone.cpp  APMROS2Drone.h  APMROS2PosController.cpp  APMROS2PosController.h  APMROS2PosPublisher.cpp  APMROS2PosPublisher.h  APMROS2PosSubscriber.cpp  APMROS2PosSubscriber.h  APMROS2StatusController.cpp  APMROS2StatusController.h  ROS2CameraData.h  ROS2CameraGimbal.h  ROS2ServoController.h  ROS2YOLODetector.h  ROS2YOLODetectorImage.h
src/offboard_control/APMROS2drone/task/: AppochTargetTask.cpp  AppochTargetTask.h  DoLandTask.cpp  DoLandTask.h  DoShotTask.cpp  DoShotTask.h
src/offboard_control/ROS2drone/: ROS2Drone.cpp  ROS2Drone.h  ROS2PosController.h  ROS2PosPublisher.h  ROS2PosSubscriber.h  ROS2StatusController.h
src/offboard_control/algorithm/: KMeans.cpp  KalmanFilter2D.h  clustering.cpp  clustering.h
src/offboard_control/algorithm/pid/: FuzzyPID.cpp  FuzzyPID.h  MYPID.h  PID.cpp  PID.h
src/offboard_control/drone/: AbstractDrone.cpp  AbstractDrone.h  Camera.h  CameraDataObserverInterface.h  CameraDate.h  CameraGimbal.h  CameraGimbalInterface.h  CameraInterface.h  PosController.cpp  PosController.h  PosDataObserverInterface.h  PosPublisher.h  PosPublisherInterface.h  PosSubscriber.h  PosSubscriberInterface.h  ServoController.h  ServoControllerInterface.h  StatusController.h  YOLODetector.h  YOLODetectorInterface.h
src/offboard_control/drone/task/: PrintInfoTask.cpp  PrintInfoTask.h  RTLLandTask.cpp  RTLLandTask.h  SetPointTask.cpp  SetPointTask.h  WayPointTask.cpp  WayPointTask.h
src/offboard_control/module/: Camera.h  CameraGimbal.h  ServoController.h  YOLODetector.cpp  YOLODetector.h  YOLOTargetType.h
src/offboard_control/stateMachine/: State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateMachineExample.h
src/offboard_control/stateMachine/apm_state/: DolandState.cpp  DolandState.h  DoshotState.cpp  DoshotState.h  EndState.cpp  EndState.h  GetTargetState.cpp  GetTargetState.h  GotoScoutPointState.cpp  GotoScoutPointState.h  GotoShotPointState.cpp  GotoShotPointState.h  InitState.cpp  InitState.h  ReflushConfigState.cpp  ReflushConfigState.h  StopState.cpp  StopState.h  SurroundSeeState.cpp  SurroundSeeState.h  TakeoffState.cpp  states.h  (+3 more)
src/offboard_control/task/: AppochTargetTask.cpp  AppochTargetTask.h  BlankTask.cpp  BlankTask.h  DeviceVisitor.h  DoLandTask.cpp  DoLandTask.h  DoShotTask.cpp  DoShotTask.h  PrintInfoTask.cpp  PrintInfoTask.h  RTLLandTask.cpp  RTLLandTask.h  SetPointTask.cpp  SetPointTask.h  Task.cpp  Task.h  TaskBase.h  TaskManager.h  WaitTask.cpp  WaitTask.h  WayPointTask.cpp  WayPointTask.h
src/offboard_control/utils/: Readyaml.h  Timer.h  math.cpp  math.h  utils.h
src/offboard_control/waypoint/: SCurve.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h  WayPoints.h
test/: task_test.cpp  tutorial_test.cpp
(+3 files in other folders)
